2003-05-12  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclBasic.c (TclInvokeObjectCommand):  objv[argc] is no
        longer set to NULL (Tcl_CreateObjCommand docs already say that it
        should not be accessed).

	* generic/tclObj.c (tclCmdNameType):  Corrected variable use of the
	otherValuePtr or the twoPtrValue.ptr1 fields to store a
	(ResolvedCmdName *) as the internal rep.  [Bug 726018].

	* doc/Eval.3:  Corrected prototype for Tcl_GlobalEvalObj [Bug 727622].

2003-05-12  Miguel Sofer <msofer@users.sf.net>

	* generic/tclVar.c (TclObjLookupVar): [Bug 735335] temporary fix,
	disabling usage of tclNsVarNameType.
	* tests/var.test (var-15.1): test for [Bug 735335]

2003-05-10  Zoran Vasiljevic <zoran@archiware.com>

	* unix/tclUnixThrd.c: corrected Tcl Bug #723502

2003-05-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOUtil.c: ensure cd is thread-safe.
	[Bug #710642] (vasiljevic)

	* win/tclWinSerial.c (SerialCloseProc): correct mem leak on
	closing a Windows serial port [Bug #718002] (schroedter)

	* generic/tclCmdMZ.c (Tcl_StringObjCmd): prevent string repeat
	crash when overflow sizes were given (throws error). [Bug #714106]

2003-05-09  Joe Mistachkin <joe@mistachkin.com>

	* generic/tclThreadAlloc.c (TclFreeAllocCache): Fixed memory leak
        caused by treating cachePtr as a TLS index [Bug 731754].

	* win/tclAppInit.c (Tcl_AppInit): Fixed memory leaks caused by not
        freeing the memory allocated by setargv and the async handler created
        by Tcl_AppInit. An exit handler has been created that takes care of
        both leaks. In addition, Tcl_AppInit now uses ckalloc instead of
        Tcl_Alloc to allow for easier leak tracking and to be more consistent
        with the rest of the Tcl core [Bugs 733156, 733221].

	* tools/encoding/txt2enc.c (main): Fixed memory leak caused by failing
        to free the memory used by the toUnicode array of strings [Bug 733221].
