@@ -1,5 +1,9 @@
 2003-05-12  Don Porter  <dgp@users.sourceforge.net>
 
+	* generic/tclInterp.c: (AliasObjCmd):	Added refCounting of the words
+	* tests/interp.test (interp-33.1):	of the target of an interp
+	alias during its execution.  Also added test. [Bug 730244].
+
         * generic/tclBasic.c (TclInvokeObjectCommand):  objv[argc] is no
         longer set to NULL (Tcl_CreateObjCommand docs already say that it
         should not be accessed).
